style: fix overflow scroll on queue

--- a/src/styles/pages/party/home.module.scss
+++ b/src/styles/pages/party/home.module.scss
@@ -63,7 +63,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        overflow: scroll;
+        overflow: hidden;
 
         .queueInfo {
           margin-top: 15px;
